frontend/src/app/nav-bar/nav-bar.module.scss
@import "src/variables";


.navAppWrapper {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    height: 100%;
    padding-bottom: $bottomBarHeight;
    background: var(--main-background);
    z-index: 0;
}

.topNavBar {
    width: 100%;
    height: $bottomBarHeight;
    position: fixed;
    bottom: 0;
    letter-spacing: 1.1px;
    z-index: 100;
}

.childrenWrapper {
    height: 100%;
    overflow-y: scroll;
    padding: $appWrapperPadding $appWrapperPadding $bottomBarHeight $appWrapperPadding ;
    z-index: 1;
    position: relative;
}

@media (min-width: $medium) {
    .navAppWrapper {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        padding-bottom: 0;
    }

    .childrenWrapper {
        width: 100%;
        margin: 0 auto;
        max-width: 1100px;
        padding: 0 $appWrapperPadding $appWrapperPadding $appWrapperPadding;
    }

    .childrenTopSpace {
        height: 80px;
        width: 100%;
    }

    .topNavBar {
        width: 260px;
        height: 100%;
        position: relative;
        letter-spacing: initial;
        margin-right: 16px;
        z-index: 1;
    }
}

